[gd_scene load_steps=2 format=3 uid="uid://cwxls8w1xnk4e"]

[ext_resource type="Script" uid="uid://52wxccwn3ufy" path="res://ui/menus/pause_menu.gd" id="1_hv7dm"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hv7dm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "PAUSED
"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ResumeButton" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resume"

[node name="EndGameButton" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "End game"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/EndGameButton" to="." method="_on_end_game_button_pressed"]
